tests/snapshots/contract__doctor@macos.snap
---
source: tests/contract.rs
expression: "serde_json::json!({ \"exit\": code, \"envelope\": value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "doctor",
    "ok": true,
    "data": {
      "environment": {
        "config_file": "[path]",
        "storage_dir": "[path]",
        "credential_service": "[slot]",
        "credential_store": "keychain",
        "home": "[path]"
      },
      "checks": [
        {
          "code": "security_tool",
          "name": "security tool",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "config_file",
          "name": "config file",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "identity",
          "name": "identity",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "slot",
          "name": "slot",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "credential_store",
          "name": "credential store",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "credential",
          "name": "credential",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "usage_cache",
          "name": "usage cache",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "home",
          "name": "pitboard home",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "state",
          "name": "accounts",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "parked_login",
          "name": "account alpha",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "parked_login",
          "name": "account beta",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        },
        {
          "code": "storage_v5",
          "name": "storage v5",
          "level": "ok",
          "detail": "[detail]",
          "advice": ""
        }
      ]
    },
    "warnings": [],
    "error": null
  }
}
