tests/snapshots/contract__forget.snap
---
source: tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "forget",
    "ok": true,
    "data": {
      "label": "work",
      "email": "b@example.com"
    },
    "warnings": [],
    "error": null
  }
}
